VSDebugPro_3-3-0-0_2019-08-03

    [+] Enabled install for newever versions of VS2019
	[*] Code refactoring and fixes

VSDebugPro_3-2-0-1_2019-03-23

    [+] Enabled install for VS2019
	[*] Updated AddEntry method for the commands history buffer
	[*] Updated copyright

VSDebugPro_3-2-0-0_2018-08-22

    [+] Added DkmProcess internal apis
    [+] Added minidump status message for commands
    [+] Added minidump support for dumpmem command

VSDebugPro_3-1-0-3_2018-08-12

    [+] Changed calling convention for libntdbg
    [+] Added memory access check for Read / Write memory
    [+] Working directory will now default to Temp

VSDebugPro_3-1-0-2_2018-07-28
    
    [*] Updated command status message to actually be usefull
    [+] Added error code messages for commands
    [+] Added exception tracing for commands

VSDebugPro_3-1-0-1_2018-07-24
    
    [*] Changed VSDebugPro license to MIT
    [*] Updated Copyright
    [*] Released extension code on github

VSDebugPro_3-1-0-0_2018-07-19
    
    [*] Renamed VSDebugTool to VSDebugPro
    [*] Updated Copyright
    [*] Updated .net assemblies
    [*] Minor bug fix

VSDebugTool_3-0-0-0_2018-03-21
    
    [+] VS2017 is now supported
    [-] Removed support for VS2010
    [*] Reworked Logo :)
    [*] Compiled with VS2017
    [*] Fixes & Code updates
    [*] Code refactoring
    [*] Settings UI updated
    [*] updated wow64ext
    [*] Reworked dependencies
    

VSDebugTool_2-0-7-4_2014-07-22

    [+] VS2014 compatibility

VSDebugTool_2-0-7-3_2014-07-12

    [*] updated wow64ext to 1.0.0.6
    [*] updated copyright year for wow64ext

VSDebugTool_2-0-7-2_2014-06-23

    [*] fixed some issues with empty arguments for commands
    [*] improved command line parsing
    [+] added -f ( overwrite file ) option for dumpmem
    [+] added -a ( append to file ) option for dumpmem

VSDebugTool_2-0-7-1_2014-06-15
    
    [*] updated wow64ext
    [*] updated build toolset
    [*] fixed visual studio crashes on Windows 8 / 8.1