@@ -3,7 +3,7 @@
  * 
  * 
  * MIT License
- * Copyright (c) 2018 Ovidiu Ionescu
+ * Copyright (c) 2019 Ovidiu Ionescu
  * http://www.vsdebug.pro
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
